--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	// H2
-	runtimeOnly 'com.h2database:h2'
+	//runtimeOnly 'com.h2database:h2'
 
 	// MYSQL
-	//implementation 'mysql:mysql-connector-java:8.3'
+	implementation 'mysql:mysql-connector-java:8.3'
 
 	//Lombok
 	compileOnly 'org.projectlombok:lombok'
