--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -31,6 +31,9 @@ jobs:
       uses: gradle/actions/setup-gradle@v3
 
     # 4. Spring Boot 애플리케이션 빌드
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+    
     - name: Build with Gradle
       run: ./gradlew clean bootJar
 
