--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+	//AWS S3
+	implementation 'software.amazon.awssdk:s3:2.27.12'
+
 	// Apache Commons Validator
 	implementation 'commons-validator:commons-validator:1.9.0'
 
