--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+	//coolSMS
+	implementation 'net.nurigo:sdk:4.3.2'
+
 	//AWS S3
 	implementation 'software.amazon.awssdk:s3:2.27.12'
 
