--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -50,6 +50,12 @@ jobs:
         mkdir -p src/main/resources
         echo "${{ secrets.APPLICATION_SMS_YML }}" > src/main/resources/application-sms.yml
 
+    # 2-6. application-business.yml 파일 생성
+    - name: Create application-sms.yml
+      run: |
+        mkdir -p src/main/resources
+        echo "${{ secrets.APPLICATION_BUSINESS_YML }}" > src/main/resources/application-business.yml
+
     # 3. Gradle 설정
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
