--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	//coolSMS
 	implementation 'net.nurigo:sdk:4.3.2'
@@ -50,10 +50,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	// H2
-	//runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'com.h2database:h2'
 
 	// MYSQL
-	implementation 'com.mysql:mysql-connector-j:9.1.0'
+//	implementation 'com.mysql:mysql-connector-j:9.1.0'
 
 	//Lombok
 	compileOnly 'org.projectlombok:lombok'
